--- a/hr_dashboard/templates/index.html
+++ b/hr_dashboard/templates/index.html
@@ -4,7 +4,7 @@
 	<h2>HR Data Analytics Portal</h2>
 	<p>My Dashboard</p>
 	<div class="row-fluid" id="quote">
-		<div class="col-xs-6 col-sm-6 col-md-12 col-lg-12">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="panel panel-default panel-horizontal">
 			<div class="panel-heading gradient" >
 				<h5 class="panel-title"><i>Quote of the Day</i></h5>						
@@ -16,52 +16,104 @@
 		</div>
 	</div>		
 	<div class="row-fluid">
-		<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="dash-panel">
 			<div class="panel panel-default">
 				<div class="panel-body">
 				<a href="{{url_for('demographics')}}"><p><b>Employee Demographics</b></p></a>
 					<hr>
-					<div id='graph-img'>
-						<img src={{ src1 }} alt="departments">
+					<div id="slider">
+					  <div class="row">
+						  <div id="carousel-bounding-box">
+							  <div class="carousel slide" id="myCarousel1">
+								  <div class="carousel-inner">
+									  <div class="active item" data-slide-number="0"><img src={{ src_dict.src1a }} alt="DEMO-img1"></div>
+									  <div class="item" data-slide-number="1"><img src={{ src_dict.src2a }} alt="DEMO-img2"></div>
+									  <div class="item" data-slide-number="2"><img src={{ src_dict.src3a }} alt="DEMO-img3"></div>
+									  <div class="item" data-slide-number="3"><img src={{ src_dict.src4a }} alt="DEMO-img4"></div>
+									  <div class="item" data-slide-number="4"><img src={{ src_dict.src5 }} alt="DEMO-img5"></div>
+									  <div class="item" data-slide-number="5"><img src={{ src_dict.src6 }} alt="DEMO-img6"></div>
+									  <div class="item" data-slide-number="6"><img src={{ src_dict.src7 }} alt="DEMO-img7"></div>
+									  <div class="item" data-slide-number="7"><img src={{ src_dict.src8 }} alt="DEMO-img8"></div>
+									  <div class="item" data-slide-number="8"><img src={{ src_dict.src9 }} alt="DEMO-img9"></div>
+									  <div class="item" data-slide-number="9"><img src={{ src_dict.src10 }} alt="DEMO-img10"></div>
+									  <div class="item" data-slide-number="10"><img src={{ src_dict.src11 }} alt="DEMO-img11"></div>
+									  <div class="item" data-slide-number="11"><img src={{ src_dict.src12 }} alt="DEMO-img12"></div>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
 					</div>
 				</div>						
 			</div>
 		</div>		
-		<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<a href="{{url_for('recruiting')}}"><p><b>Recruitment</b></p></a>
 					<hr>
-					<div id="graph-img">
-						<img src={{ src2 }} alt="recruitment">
-					</div>
+					<div id="slider">
+					  <div class="row">
+						  <div id="carousel-bounding-box">
+							  <div class="carousel slide" id="myCarousel2">
+								  <div class="carousel-inner">
+									  <div class="active item" data-slide-number="0"><img src={{ src_dict.src1b }} alt="REC-img1"></div>
+									  <div class="item" data-slide-number="1"><img src={{ src_dict.src2b }} alt="REC-img2"></div>
+									  <div class="item" data-slide-number="2"><img src={{ src_dict.src3b }} alt="REC-img3"></div>
+									  <div class="item" data-slide-number="3"><img src={{ src_dict.src4b }} alt="REC-img4"></div>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
+					</div>				
 				</div>						
 			</div>			
 		</div>	
 	</div>
 	<div class="row-fluid">			
-		<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">		
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="dash-panel">		
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<a href="{{url_for('talent')}}"><p><b>Talent Management</b></p></a>
 					<hr>
-					<div id="graph-img">
-						<img src={{ src3 }} alt="staff performance">
+					<div id="slider">
+					  <div class="row">
+						  <div id="carousel-bounding-box">
+							  <div class="carousel slide" id="myCarousel3">
+								  <div class="carousel-inner">
+									  <div class="active item" data-slide-number="0"><img src={{ src_dict.src1c }} alt="TM-img1"></div>
+									  <div class="item" data-slide-number="1"><img src={{ src_dict.src2c }} alt="TM-img2"></div>
+									  <div class="item" data-slide-number="2"><img src={{ src_dict.src3c }} alt="TM-img3"></div>
+									  <div class="item" data-slide-number="3"><img src={{ src_dict.src4c }} alt="TM-img4"></div>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
 					</div>
 				</div>						
 			</div>			
 		</div>				
-		<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<a href="{{url_for('attrition')}}"><p><b>Employee Attrition & Retention</b></p></a>
 					<hr>
-					<div id="graph-img">
-						<img src={{ src4 }} alt="attrition&retention">
-					</div>
+					<div id="slider">
+					  <div class="row">
+						  <div id="carousel-bounding-box">
+							  <div class="carousel slide" id="myCarousel4">
+								  <div class="carousel-inner">
+									  <div class="active item" data-slide-number="0"><img src={{ src_dict.src1d }} alt="A&R-img1"></div>
+									  <div class="item" data-slide-number="1"><img src={{ src_dict.src2d }} alt="A&R-img2"></div>
+									  <div class="item" data-slide-number="2"><img src={{ src_dict.src3d }} alt="A&R-img3"></div>
+									  <div class="item" data-slide-number="3"><img src={{ src_dict.src4d }} alt="A&R-img4"></div>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
+					</div> 
 				</div>						
 			</div>		
-		</div>		
+		</div>
 	</div>		
 {% endblock %}
 
@@ -81,4 +133,21 @@
 			$('#quoteInfo').html("<h5>" + quote + "</h5>" + "<p><i>- " + author + "</i></p>");
 		  }
 	}	
-{% endblock %}					
+{% endblock %}			
+
+{% block carousel_script %}
+	jQuery(document).ready(function($) {
+	  $('#myCarousel1').carousel({
+		  interval: 5000
+	  });
+	  $('#myCarousel2').carousel({
+		  interval: 5000
+	  });
+	  $('#myCarousel3').carousel({
+		  interval: 5000
+	  });
+		$('#myCarousel4').carousel({
+		  interval: 5000
+	  });
+	});
+{% endblock %}
