--- a/hr_dashboard/templates/old templates/base_OLD.html
+++ b/hr_dashboard/templates/old templates/base_OLD.html
@@ -10,7 +10,6 @@
 		<style>
 		{% block glossary_style %}{% endblock %}
 		</style>
-		
 		<title>Dental Magic HR Analytics Portal</title>		
 		<link rel="shortcut icon" href="../static/img/favicon.png">
          <!-- Bootstrap CSS CDN -->
@@ -21,14 +20,13 @@
 		<link rel="stylesheet" href="../static/css/fontastic.css">
         <!-- Dashboard CSS -->
         <link rel="stylesheet" href="../static/css/style_custom.css">
-		<!-- My JS files -->
+		<!-- Other JS files -->
 		<script src="../static/js/hr_index.js" type="text/javascript"></script>	
-		<script src="../static/js/hr_xtra.js" type="text/javascript"></script>		
-		<!-- Other CSS & JS CDN files -->
+		<script src="../static/js/hr_xtra.js" type="text/javascript"></script>			
+		<!-- Other CSS CDN files -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css">	
-
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css">				
     </head>
 
 <body>
@@ -134,9 +132,8 @@
 		 $("#year").text((new Date).getFullYear());
 		});		
 		<!-- Start JS Blocks -->				
-		{% block glossary_script %}{% endblock %}
-		{% block quote_script %}{% endblock %}
-		{% block carousel_script %}{% endblock %}			
+			{% block glossary_script %}{% endblock %}
+			{% block quote_script %}{% endblock %}
 		<!-- End JS Blocks -->		
 	</script>
 	
