--- a/hr_dashboard/templates/base.html
+++ b/hr_dashboard/templates/base.html
@@ -9,14 +9,11 @@
 		 <!-- Glossary CSS Block -->
 		<style>
 		{% block glossary_style %}{% endblock %}
-		</style>
-		
+		</style>	
 		<title>Dental Magic HR Analytics Portal</title>		
 		<link rel="shortcut icon" href="../static/img/favicon.png">
          <!-- Bootstrap CSS CDN -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- JQuery CSS CDN -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
 		<!-- Fontastic Custom icon font-->
 		<link rel="stylesheet" href="../static/css/fontastic.css">
         <!-- Dashboard CSS -->
@@ -25,13 +22,15 @@
 		<script src="../static/js/hr_index.js" type="text/javascript"></script>	
 		<script src="../static/js/hr_xtra.js" type="text/javascript"></script>		
 		<!-- Other CSS & JS CDN files -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css">	
-
+		<link rel="stylesheet" href="../static/css/loader_dist/loader-clock.css">
     </head>
 
-<body>
+<body>	
+	<div id="loading" class="loader loader-clock is-active"></div>
 	<div class="wrapper">
 		<!-- Sidebar Holder -->
             <nav id="sidebar">
@@ -80,7 +79,7 @@
                 </ul>
             </nav>
             <!-- End Sidebar Holder -->
-            <!-- Start Page Content Holder -->
+            <!-- Start Page Content Holder -->					
             <div id="content">
 				<!-- Start Top Nav Bar -->
                 <nav id="nav" class="navbar navbar-default">
@@ -92,16 +91,18 @@
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#"><img src="../static/img/user.png" alt="John Doe" width="35" height="35"></a></li>							
-								<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+								<li><img src="../static/img/user.png" alt="John Doe" width="35" height="35"></li>							
+								<li><span class="glyphicon glyphicon-log-out"></span> Log Out</li>
 							</ul>
                         </div>
                     </div>
                 </nav>			
 				<!-- End Top Navbar  -->
-				<!-- Start Block Content -->				
+				<!-- Start Block Content -->		
+				<div id="page-body" class="animate-bottom">				
 				{% block content %}
 				{% endblock %}				
+				</div>
 				<!-- End Block Content -->
 		     </div>
 		   <!-- End Page Content Holder -->
@@ -124,7 +125,25 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 	<!-- other JS CDN-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js" type="text/javascript"></script>
-	<script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/nanobar/0.2.1/nanobar.min.js"></script>
+	
+	<script>	
+		//loader
+		function onReady(callback) {
+		  var intervalId = window.setInterval(function() {
+			if (document.getElementsByTagName('body')[0] !== undefined) {
+			  window.clearInterval(intervalId);
+			  callback.call(this);
+			}
+		  }, 1000);
+		}
+		function setVisible(selector, visible) {
+		  document.querySelector(selector).style.display = visible ? 'block' : 'none';
+		}
+		onReady(function() {
+		  setVisible('#loading', false);
+		}); 
+
 		$(document).ready(function () {
 		//sidebar
 		 $('#sidebarCollapse').on('click', function () {
@@ -132,8 +151,9 @@
 		 });
 		 //copyright year
 		 $("#year").text((new Date).getFullYear());
-		});		
-		<!-- Start JS Blocks -->				
+		});	
+				
+		<!-- Start JS Blocks -->		
 		{% block glossary_script %}{% endblock %}
 		{% block quote_script %}{% endblock %}
 		{% block carousel_script %}{% endblock %}			
