--- a/hr_dashboard/templates/application-error.html
+++ b/hr_dashboard/templates/application-error.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h1>An unexpected error has occurred</h1>
-    <p>The administrator has been notified. Sorry for the inconvenience!</p>
-    <p><a href="{{ url_for('index') }}">Retry HomePage</a></p>
+    <h3>The administrator has been notified. Sorry for the inconvenience!</h3>
+    <h6>Please check back soon.</h6>
 {% endblock %}
