--- a/hr_dashboard/templates/talent.html
+++ b/hr_dashboard/templates/talent.html
@@ -2,22 +2,31 @@
 
 {% block content %}
     <h2>Talent Management</h2>
-<!-- 	<div class="row-fluid">
+	<div class="row-fluid">
 		<div class='col-sm-12 col-md-12 col-lg-12'>
 			<div class="well">
-				<p>
-				 Testing, testing, testing...
-				</p>
-			</div>		 
+				<div class="item">
+					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='talent') }}">
+						<img src="../static/img/get_pdf.png" width="36vw" height="34vw" alt="Get PDF"><br>Get PDF</a>			 
+				</div>
+				<div class="vdivider"></div>
+				<div class="item">
+					<p>
+						The following data visualizations depict the current information on file for all employment status types which include terminated 
+						or former staff. The information that is based solely on data for current staff members will be labeled as such. These visualizations are 
+						subject to change whenever database updates are made.
+					</p>
+				</div>   
+			</div><br>		 
 		</div>				
-	</div> -->
+	</div>
 	<div class="row-fluid">
 		<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">
 			<div class="panel panel-default">
 			<div class="panel-heading"><b>Performance Score Results - Current Staff</b></div>
 				<div class="panel-body">
 					<div id='graph-img'>
-						<img src={{ src1 }} alt="d">
+						<img src={{ src_dict.src1 }} alt="d">
 					</div>
 				</div>						
 			</div>
@@ -27,7 +36,7 @@
 			<div class="panel-heading"><b>Performance Score Results By Department</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src4 }} alt="">
+						<img src={{ src_dict.src4 }} alt="">
 					</div>
 				</div>						
 			</div>			
@@ -39,7 +48,7 @@
 			<div class="panel-heading"><b>Performance Score Distribution - Current Staff</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src2 }} alt="d">
+						<img src={{ src_dict.src2 }} alt="d">
 					</div>
 				</div>						
 			</div>
@@ -51,7 +60,7 @@
 			<div class="panel-heading"><b>Performance Scores Given By Manager</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src3 }} alt="d">
+						<img src={{ src_dict.src3 }} alt="d">
 					</div>
 				</div>						
 			</div>
