--- a/hr_dashboard/templates/loading2.html
+++ b/hr_dashboard/templates/loading2.html
@@ -2,6 +2,8 @@
 
 {% block loading2_style %}	
 	body { 
+		width:100%; 
+		height:100%; 
 		background-image: url(../static/img/logo2.png) !important;
 		background-repeat: repeat !important;
 	}
