multiple file updates

--- a/hr_dashboard/templates/demographics.html
+++ b/hr_dashboard/templates/demographics.html
@@ -6,10 +6,10 @@
 		<div class='col-sm-12 col-md-12 col-lg-12'>
 			<div class="well">
 				<div class="item">
-					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='demographics') }}">
+					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='demographics_pdf') }}">
 						<img src="../static/img/get_pdf.png" width="36vw" height="34vw" alt="Get PDF"><br>Get PDF</a>			 
 				</div>
-				<div class="vdivider"></div>
+				<!-- <div class="vdivider"></div> -->
 				<div class="item">
 					<p>
 						The following data visualizations depict the current information on file for all employment status types which include terminated 
@@ -26,7 +26,7 @@
 			<div class="panel-heading"><b>Employment Status - All Records On File</b></div>
 				<div class="panel-body">
 					<div id='graph-img'>
-						<img src={{ src_dict.src1 }} alt="d">
+						<img src={{ src_dict.src1 }} alt="demoImg1">
 					</div>
 				</div>						
 			</div>
@@ -36,7 +36,7 @@
 			<div class="panel-heading"><b>Staff Percentages By Department</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src2 }} alt="">
+						<img src={{ src_dict.src2 }} alt="demoImg2">
 					</div>
 				</div>						
 			</div>			
@@ -48,7 +48,7 @@
 			<div class="panel-heading"><b>Staff Totals By Department</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src3 }} alt="">
+						<img src={{ src_dict.src3 }} alt="demoIm3">
 					</div>
 				</div>						
 			</div>			
@@ -58,7 +58,7 @@
 			<div class="panel-heading"><b>Current Racial Percentages</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src6 }} alt="">
+						<img src={{ src_dict.src6 }} alt="demoImg4">
 					</div>
 				</div>						
 			</div>		
@@ -70,7 +70,7 @@
 			<div class="panel-heading"><b>Current Staff Racial Distribution</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src_dict.src5 }} alt="d">
+						<img src={{ src_dict.src5 }} alt="demoImg5">
 					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
 			<div class="panel-heading"><b>Current Staff Count By Position</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src4 }} alt="">
+						<img src={{ src_dict.src4 }} alt="demoImg6">
 					</div>
 				</div>						
 			</div>			
@@ -92,7 +92,7 @@
 			<div class="panel-heading"><b>Staff Location By Department</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src12 }} alt="">
+						<img src={{ src_dict.src12 }} alt="demoImg7">
 					</div>
 				</div>						
 			</div>		
@@ -104,7 +104,7 @@
 			<div class="panel-heading"><b>Staff Gender Totals</b></div>
 				<div class="panel-body">
 					<div id="graph2-img">
-						<img src={{ src_dict.src7 }} alt="">
+						<img src={{ src_dict.src7 }} alt="demoImg8">
 					</div>
 				</div>						
 			</div>			
@@ -114,7 +114,7 @@
 			<div class="panel-heading"><b>Staff Gender Distribution By Department</b></div>
 				<div class="panel-body">
 					<div id="graph-img">
-						<img src={{ src_dict.src11 }} alt="">
+						<img src={{ src_dict.src11 }} alt="demoImg9">
 					</div>
 				</div>						
 			</div>		
@@ -126,7 +126,7 @@
 			<div class="panel-heading"><b>Racial Distribution By Department</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src_dict.src10 }} alt="d">
+						<img src={{ src_dict.src10 }} alt="demoImg10">
 					</div>
 				</div>						
 			</div>
@@ -138,7 +138,7 @@
 			<div class="panel-heading"><b>Marital Status Distribution By Department</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src_dict.src9 }} alt="d">
+						<img src={{ src_dict.src9 }} alt="demoImg11">
 					</div>
 				</div>						
 			</div>
@@ -150,7 +150,7 @@
 			<div class="panel-heading"><b>Staff Age Distribution</b></div>
 				<div class="panel-body">
 					<div id='graph2-img'>
-						<img src={{ src_dict.src8 }} alt="d">
+						<img src={{ src_dict.src8 }} alt="demoImg12">
 					</div>
 				</div>			
 			</div>
