numerous file updates

--- a/hr_dashboard/templates/attrition.html
+++ b/hr_dashboard/templates/attrition.html
@@ -9,7 +9,7 @@
 					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='attrition') }}">
 						<img src="../static/img/get_pdf.png" width="36vw" height="34vw" alt="Get PDF"><br>Get PDF</a>			 
 				</div>
-				<div class="vdivider"></div>
+				<!-- <div class="vdivider"></div> -->
 				<div class="item">
 					<p>
 						The following data visualizations depict the current information on file for all employment status types which include terminated 
