--- a/hr_dashboard/templates/base.html
+++ b/hr_dashboard/templates/base.html
@@ -138,7 +138,7 @@
 		 //sticky footer
 		  var bodyHeight = $("body").height();
 		  var vwptHeight = $(window).height();
-		  if (vwptHeight > (bodyHeight + 75)) {
+		  if (vwptHeight > (bodyHeight)) {
 			$("footer#footer").css("position", "absolute").css("bottom", 0).css("left", 0).css("right", 0);
 		  }
 		});	
