--- a/hr_dashboard/templates/attrition.html
+++ b/hr_dashboard/templates/attrition.html
@@ -6,7 +6,7 @@
 		<div class='col-sm-12 col-md-12 col-lg-12'>
 			<div class="well">
 				<div class="item">
-					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='attrition') }}">
+					<a class="btn btn-default" href="{{ url_for('download_pdf', pageName='attrition_pdf') }}">
 						<img src="../static/img/get_pdf.png" width="36vw" height="34vw" alt="Get PDF"><br>Get PDF</a>			 
 				</div>
 				<!-- <div class="vdivider"></div> -->
