--- a/hr_dashboard/templates/attrition_pdf.html
+++ b/hr_dashboard/templates/attrition_pdf.html
@@ -15,7 +15,7 @@
 	  <div class="wrapper">		
 	  <h2>Attrition & Retention</h2>
 		<div class="row-fluid">
-			<div class="col-sm-12 col-md-5 col-lg-5" id="dash-panel">
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Reasons For Termination - All On Record</b></div>
 					<div class="panel-body">
@@ -24,8 +24,10 @@
 						</div>
 					</div>						
 				</div>
-			</div>		
-			<div class="col-sm-12 col-md-7 col-lg-7" id="dash-panel">	
+			</div>	
+		</div>	
+		<div class="row-fluid">			
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Reasons For Termination - Marital Status Breakdown</b></div>
 					<div class="panel-body">
