--- a/hr_dashboard/templates/demographics_pdf.html
+++ b/hr_dashboard/templates/demographics_pdf.html
@@ -17,7 +17,7 @@
 	  
 		<h2>Employee Demographics</h2>
 		<div class="row-fluid">
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Employment Status - All Records On File</b></div>
 					<div class="panel-body">
@@ -26,8 +26,10 @@
 						</div>
 					</div>						
 				</div>
-			</div>		
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+			</div>	
+		</div>
+		<div class="row-fluid">			
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Percentages By Department</b></div>
 					<div class="panel-body">
@@ -39,7 +41,7 @@
 			</div>	
 		</div>
 		<div class="row-fluid">			
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">		
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Totals By Department</b></div>
 					<div class="panel-body">
@@ -48,8 +50,10 @@
 						</div>
 					</div>						
 				</div>			
-			</div>				
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+			</div>		
+		</div>
+		<div class="row-fluid">				
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Current Racial Percentages</b></div>
 					<div class="panel-body">
@@ -73,7 +77,7 @@
 			</div>
 		</div>
 		<div class="row-fluid">			
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">		
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Current Staff Count By Position</b></div>
 					<div class="panel-body">
@@ -82,8 +86,10 @@
 						</div>
 					</div>						
 				</div>			
-			</div>				
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+			</div>	
+		</div>
+		<div class="row-fluid">				
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Location By Department</b></div>
 					<div class="panel-body">
@@ -95,7 +101,7 @@
 			</div>
 		</div>
 		<div class="row-fluid">			
-			<div class="col-sm-12 col-md-4 col-lg-4" id="dash-panel">		
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Gender Totals</b></div>
 					<div class="panel-body">
@@ -104,8 +110,10 @@
 						</div>
 					</div>						
 				</div>			
-			</div>				
-			<div class="col-sm-12 col-md-8 col-lg-8" id="dash-panel">	
+			</div>	
+		</div>
+		<div class="row-fluid">				
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Gender Distribution By Department</b></div>
 					<div class="panel-body">
