--- a/hr_dashboard/templates/talent_pdf.html
+++ b/hr_dashboard/templates/talent_pdf.html
@@ -16,7 +16,7 @@
 	  
 		<h2>Talent Management</h2>
 		<div class="row-fluid">
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Performance Score Results - Current Staff</b></div>
 					<div class="panel-body">
@@ -25,8 +25,10 @@
 						</div>
 					</div>						
 				</div>
-			</div>		
-			<div class="col-sm-12 col-md-6 col-lg-6" id="dash-panel">	
+			</div>	
+		</div>	
+		<div class="row-fluid">			
+			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Performance Score Results By Department</b></div>
 					<div class="panel-body">
