Multiple file updates

--- a/hr_dashboard/templates/demographics_pdf.html
+++ b/hr_dashboard/templates/demographics_pdf.html
@@ -8,8 +8,7 @@
 		<meta name="robots" content="all,follow">
 		<title>Dental Magic HR Analytics Portal</title>		
 		<link rel="stylesheet" href="../static/pdf_style/bootstrap.min.css">
-        <link rel="stylesheet" href="../static/pdf_style/pdf_style_custom.css">		
-		
+        <link rel="stylesheet" href="../static/pdf_style/pdf_style_custom.css">			
     </head>
 
 	<body>	
@@ -22,12 +21,13 @@
 				<div class="panel-heading"><b>Employment Status - All Records On File</b></div>
 					<div class="panel-body">
 						<div id='graph-img'>
-							<img src=../static/img/status.png alt="d">
+							<img src=../static/img/status.png alt="">
 						</div>
 					</div>						
 				</div>
 			</div>	
 		</div>
+		
 		<div class="row-fluid">			
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
@@ -40,6 +40,7 @@
 				</div>			
 			</div>	
 		</div>
+		<br>		
 		<div class="row-fluid">			
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
@@ -52,6 +53,7 @@
 				</div>			
 			</div>		
 		</div>
+		<br>		
 		<div class="row-fluid">				
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
@@ -64,18 +66,20 @@
 				</div>		
 			</div>
 		</div>		
+		<br>	
 		<div class="row-fluid">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash2-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Current Staff Racial Distribution</b></div>
 					<div class="panel-body">
 						<div id='graph2-img'>
-							<img src=../static/img/raceDistrib.png alt="d">
+							<img src=../static/img/raceDistrib.png alt="">
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<br>		
 		<div class="row-fluid">			
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
@@ -88,6 +92,7 @@
 				</div>			
 			</div>	
 		</div>
+		<br>	
 		<div class="row-fluid">				
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
@@ -100,6 +105,7 @@
 				</div>		
 			</div>
 		</div>
+		<br>		
 		<div class="row-fluid">			
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">		
 				<div class="panel panel-default">
@@ -112,6 +118,8 @@
 				</div>			
 			</div>	
 		</div>
+		<br>	
+		<br>		
 		<div class="row-fluid">				
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash-panel">	
 				<div class="panel panel-default">
@@ -124,37 +132,42 @@
 				</div>		
 			</div>
 		</div>
+		<br>
+		<br>		
 		<div class="row-fluid">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash2-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Racial Distribution By Department</b></div>
 					<div class="panel-body">
 						<div id='graph2-img'>
-							<img src=../static/img/raceDistrib2.png alt="d">
+							<img src=../static/img/raceDistrib2.png alt="">
 						</div>
 					</div>						
 				</div>
 			</div>		
 		</div>	
+		<br>		
 		<div class="row-fluid">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash2-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Marital Status Distribution By Department</b></div>
 					<div class="panel-body">
 						<div id='graph2-img'>
-							<img src=../static/img/maritalDistrib.png alt="d">
+							<img src=../static/img/maritalDistrib.png alt="">
 						</div>
 					</div>						
 				</div>
 			</div>		
-		</div>			
+		</div>	
+		<br>
+        <br>		
 		<div class="row-fluid">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="dash2-panel">
 				<div class="panel panel-default">
 				<div class="panel-heading"><b>Staff Age Distribution</b></div>
 					<div class="panel-body">
 						<div id='graph2-img'>
-							<img src=../static/img/ageCount.png alt="d">
+							<img src=../static/img/ageCount.png alt="">
 						</div>
 					</div>			
 				</div>
