--- a/hr_dashboard/static/css/style_custom.css
+++ b/hr_dashboard/static/css/style_custom.css
@@ -1,3 +1,6 @@
+/* ---------------------------------------------------
+    GENRERAL STYLE
+----------------------------------------------------- */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
@@ -25,6 +28,12 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 
+footer {
+  background-color: #000;
+  color: white;
+  padding: 2.28em;
+}
+
 footer a:hover{
 	color: #8dff33 !important;
 }
@@ -50,27 +59,6 @@ i, span {
 .col-xs-5sp {
     width: 20%;
     float: left;
-}
-
-@media (min-width: 768px) {
-	.col-sm-5sp {
-        width: 20%;
-        float: left;
-    }
-}
-
-@media (min-width: 992px) {
-    .col-md-5sp {
-        width: 20%;
-        float: left;
-    }
-}
-
-@media (min-width: 1200px) {
-    .col-lg-5sp {
-        width: 20%;
-        float: left;
-    }
 }
 
 .line {
@@ -222,13 +210,9 @@ button .glyphicon {
 
 
 
-
-
-
 /* ---------------------------------------------------
     CAROUSEL STYLE
 ----------------------------------------------------- */
-
 .carousel-indicators li {
 	border: 2px solid #8dff33 !important;
 }
@@ -259,7 +243,6 @@ button .glyphicon {
 /* ---------------------------------------------------
     SPINNER/LOADER STYLE
 ----------------------------------------------------- */
-
 .progress {
 	font-family: 'Poppins', serif !important;
 	font-size: 2em !important;			
@@ -303,7 +286,6 @@ button .glyphicon {
 /* ---------------------------------------------------
     NAVBAR STYLE
 ----------------------------------------------------- */
-	
 .navbar {
     padding: 5px 5px;
     background: #fafafa;
@@ -440,12 +422,6 @@ button .glyphicon {
 	color: #ddd !important;
 }
 
-footer {
-  background-color: #000;
-  color: white;
-  padding: 1.28em;
-}
-
 a[data-toggle="collapse"] {
     position: relative;
 }
@@ -505,8 +481,29 @@ a.article, a.article:hover {
 
 
 /* ---------------------------------------------------
-    MEDIAQUERIES
+    MEDIA SETTINGS
 ----------------------------------------------------- */
+@media (min-width: 768px) {
+	.col-sm-5sp {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5sp {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5sp {
+        width: 20%;
+        float: left;
+    }
+}
+
 @media (max-width: 768px) {
     #sidebar {
         min-width: 80px;
