--- a/hr_dashboard/templates/glossary.html
+++ b/hr_dashboard/templates/glossary.html
@@ -124,7 +124,7 @@
 							<dd> The tendency for a test, selection of job qualifications, or other employment practice to screen out or otherwise limit the employment opportunities of a certain group at a greater rate than others. Also called "adverse effect" or adverse impact."</dd>
 						<a name="Disparate Treatment"></br>
 							<dt>Disparate Treatment</dt>
-							<dd> Unequal treatment in employment opportunities because of one's race, color, religion, sex, age, ancestry, national origin, disability, or veteran's status. Also called "differential treatment."
+							<dd> Unequal treatment in employment opportunities because of one's race, color, religion, sex, age, ancestry, national origin, disability, or veteran's status. Also called "differential treatment."</dd>
 
 						<a name="Employed"></br>
 							<dt>Employed</dt>
@@ -140,7 +140,7 @@
 							<dd> The federal agency that enforces Title VII of the Civil Rights Act of 1964, as amended, and other federal civil rights laws.</dd>
 						<a name="Essential Functions"></br>
 							<dt>Essential Functions</dt>
-							<dd> A position's fundamental job duties that must be performed with or without an accommodation.
+							<dd> A position's fundamental job duties that must be performed with or without an accommodation.</dd>
 
 						<a name="Facially Neutral Selection Standard/Criteria"></br>
 							<dt>Facially Neutral Selection Standard/Criteria</dt>
@@ -201,7 +201,7 @@
 							<dd> The basic tenets of public personnel administration, including such concepts as open competition for entry; selection on the basis of relative knowledge, skills, and abilities; advancement based on relative performance and ability; and fair treatment of applicants and employees in all aspects of personnel administration without regard to race, color, religion, national origin, sex, ancestry, age, disability, or political affiliation. </dd>
 						<a name="Minority"></br>
 							<dt>Minority</dt>
-							<dd> For EEO official reporting purposes, the term "minority" includes people who are Black, Hispanic, Asian or Pacific Islander and American Indian or Alaskan Native.
+							<dd> For EEO official reporting purposes, the term "minority" includes people who are Black, Hispanic, Asian or Pacific Islander and American Indian or Alaskan Native.</dd>
 
 						<a name="Native Hawaiian or Other Pacific Islander"></br>
 							<dt>Native Hawaiian or Other Pacific Islander</dt>
@@ -237,7 +237,7 @@
 							<dd> Corrective action(s) deemed necessary by a court or enforcement agency to correct or overcome the effects of past discrimination. What the corrective actions consist of depends largely on the circumstances of the employer, or the discretion of the court or enforcement agency. See also "Mandatory and Voluntary Affirmative Action."</dd>
 						<a name="Resignation"></br>
 							<dt>Resignation</dt>
-							<dd> The voluntary termination of employment by an employee.
+							<dd> The voluntary termination of employment by an employee.</dd>
 
 						<a name="Selection Procedure"></br>
 							<dt>Selection Procedure</dt>
@@ -290,7 +290,7 @@
 							<dd> A position limited to a certain stated time period.</dd>
 						<a name="Test"></br>
 							<dt>Test</dt>
-							<dd> Any performance measure used as a basis for any employment decision.
+							<dd> Any performance measure used as a basis for any employment decision.</dd>
 						<a name="Title VII"></br>
 							<dt>Title VII</dt>
 							<dd> Normally refers to Title VII of the Civil Rights Act of 1964, as amended. Title VII generally prohibits discrimination in employment on the basis of race, color, religion, sex or national origin.</dd>
