--- a/hr_dashboard/templates/500.html
+++ b/hr_dashboard/templates/500.html
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>An unexpected error has occurred</h1>
     <p>The administrator has been notified. Sorry for the inconvenience!</p>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+	<br>
+    <p><a href="{{ url_for('index') }}">Back to the Home Page</a></p>
 {% endblock %}
