--- a/hr_dashboard/templates/404.html
+++ b/hr_dashboard/templates/404.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+	<br>
+    <p><a href="{{ url_for('index') }}">Back to the Home Page</a></p>
 {% endblock %}
