image & css updates

--- a/hr_dashboard/templates/loading.html
+++ b/hr_dashboard/templates/loading.html
@@ -10,8 +10,10 @@
 			body { 
 				width:95%; 
 				height:95%; 
-				background-image: url(../static/img/logo.png) !important;
-				background-repeat: repeat !important;			   
+				background-image: url(../static/img/datapc.jpg) !important;
+				background-repeat: no-repeat !important;
+				background-attachment: fixed !important;
+				background-position: center !important; 
 		   }			
 		</style>
   </head>
