--- a/hr_dashboard/templates/loading2.html
+++ b/hr_dashboard/templates/loading2.html
@@ -4,8 +4,10 @@
 	body { 
 		width:90%; 
 		height:90%; 
-		background-image: url(../static/img/logo2.png) !important;
-		background-repeat: repeat !important;
+		background-image: url(../static/img/metrics_pic.png) !important;
+		background-repeat: no-repeat !important;
+		background-attachment: fixed !important;
+		background-position: center !important; 
 	}
 {% endblock %}
 
@@ -21,11 +23,11 @@
 		var task_func = '{{ task_func }}';
 		start_pageload_task(task_func, page);
 		
-		//auto-reload after 3 minutes
+		//auto-reload after 2 minutes
 		window.setTimeout(function(){
 			alert('An unexpected error occurred--page will reload');
 			window.location.reload();
-       }, 180000);
+       }, 120000);
 	
 	});
 {% endblock %}	
