image & loading html updates

--- a/hr_dashboard/templates/loading.html
+++ b/hr_dashboard/templates/loading.html
@@ -10,7 +10,7 @@
 			body { 
 				width:95%; 
 				height:95%; 
-				background-image: url(../static/img/datapc.jpg) !important;
+				background-image: url(../static/img/loading1.png) !important;
 				background-repeat: no-repeat !important;
 				background-attachment: fixed !important;
 				background-position: center !important; 
