--- a/hr_dashboard/templates/loading2.html
+++ b/hr_dashboard/templates/loading2.html
@@ -4,7 +4,7 @@
 	body { 
 		width:90%; 
 		height:90%; 
-		background-image: url(../static/img/metrics_pic.png) !important;
+		background-image: url(../static/img/loading2.png) !important;
 		background-repeat: no-repeat !important;
 		background-attachment: fixed !important;
 		background-position: center !important; 
