loading css updates

--- a/hr_dashboard/templates/loading.html
+++ b/hr_dashboard/templates/loading.html
@@ -8,12 +8,11 @@
 
 		<style>
 			body { 
-				width:95%; 
-				height:95%; 
+				width:96%; 
+				height:96%; 
 				background-image: url(../static/img/loading1.png) !important;
 				background-repeat: no-repeat !important;
-				background-attachment: fixed !important;
-				background-position: center !important; 
+				background-size: cover !important;
 		   }			
 		</style>
   </head>
