--- a/hr_dashboard/templates/loading2.html
+++ b/hr_dashboard/templates/loading2.html
@@ -7,7 +7,8 @@
 		background-image: url(../static/img/loading2.png) !important;
 		background-repeat: no-repeat !important;
 		background-attachment: fixed !important;
-		background-position: center !important; 
+		background-size: 50%;!important;
+		background-position: 25vw 50vh !important; 
 	}
 {% endblock %}
 
