--- a/hr_dashboard/templates/loading2.html
+++ b/hr_dashboard/templates/loading2.html
@@ -8,7 +8,7 @@
 		background-repeat: no-repeat !important;
 		background-attachment: fixed !important;
 		background-size: 50%;!important;
-		background-position: 25vh 50vh !important; 
+		background-position: 25% 50% !important; 
 	}
 {% endblock %}
 
