--- a/hr_dashboard/templates/500.html
+++ b/hr_dashboard/templates/500.html
@@ -4,5 +4,5 @@
     <h1>An unexpected error has occurred</h1>
     <p>The administrator has been notified. Sorry for the inconvenience!</p>
 	<br>
-    <p><a href="{{ url_for('index') }}">Back to the Home Page</a></p>
+    <p>Please try again or go back to the <a href="{{ url_for('index') }}">Home</a> page.</p>
 {% endblock %}
