--- a/hr_dashboard/templates/application-error.html
+++ b/hr_dashboard/templates/application-error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>An unexpected error has occurred</h1>
+    <h1>An unexpected error with the application has occurred</h1>
     <h3>The administrator has been notified. Sorry for the inconvenience!</h3>
     <h6>Please check back soon.</h6>
 {% endblock %}
